--- a/Develop/index.html
+++ b/Develop/index.html
@@ -26,13 +26,63 @@
     <header class="jumbotron">
       <h1 class="display-3">Work Day Scheduler</h1>
       <p class="lead">A simple calendar app for scheduling your work day</p>
+      <!-- weekday, month day -->
       <p id="currentDay" class="lead"></p>
     </header>
+
     <div class="container">
       <!-- Timeblocks go here -->
+      <div class="row d-flex justify-content-center">
+        <div class="col-12 col-sm-12 col-md-10 col-lg-8">
+          <p class="bg-danger text-light text-center p-3">9AM</p>
+        </div>
+      </div>
+      <div class="row d-flex justify-content-center">
+        <div class="col-12 col-sm-12 col-md-10 col-lg-8">
+          <p class="bg-danger text-light text-center p-3">10AM</p>
+        </div>
+      </div>
+      <div class="row d-flex justify-content-center">
+        <div class="col-12 col-sm-12 col-md-10 col-lg-8">
+          <p class="bg-danger text-light text-center p-3">11AM</p>
+        </div>
+      </div>
+      <div class="row d-flex justify-content-center">
+        <div class="col-12 col-sm-12 col-md-10 col-lg-8">
+          <p class="bg-danger text-light text-center p-3">12PM</p>
+        </div>
+      </div>
+      <div class="row d-flex justify-content-center">
+        <div class="col-12 col-sm-12 col-md-10 col-lg-8">
+          <p class="bg-danger text-light text-center p-3">1PM</p>
+        </div>
+      </div>
+      <div class="row d-flex justify-content-center">
+        <div class="col-12 col-sm-12 col-md-10 col-lg-8">
+          <p class="bg-danger text-light text-center p-3">2PM</p>
+        </div>
+      </div>
+      <div class="row d-flex justify-content-center">
+        <div class="col-12 col-sm-12 col-md-10 col-lg-8">
+          <p class="bg-danger text-light text-center p-3">3PM</p>
+        </div>
+      </div>
+      <div class="row d-flex justify-content-center">
+        <div class="col-12 col-sm-12 col-md-10 col-lg-8">
+          <p class="bg-danger text-light text-center p-3">4PM</p>
+        </div>
+      </div>
+      <div class="row d-flex justify-content-center">
+        <div class="col-12 col-sm-12 col-md-10 col-lg-8">
+          <p class="bg-danger text-light text-center p-3">5PM</p>
+        </div>
+      </div>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+    <!-- replacement of moment.js -->
+    <script src="https://unpkg.com/dayjs@1.8.21/dayjs.min.js"></script>
+    <script src="./script.js"></script>
   </body>
 </html>
