add timer function and print to site

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -24,7 +24,10 @@
     <!-- weekday, month day -->
     <p id="currentDay" class="lead time-block"></p>
   </header>
-  <section class="saveMessage">Appointment added to&nbsp;<span class="red">localStorage</span><span class="material-symbols-outlined"> check</span></section>
+  <section class="saveMessage">Appointment added to&nbsp;
+    <span class="red">localStorage</span>
+    <span class="material-symbols-outlined">check</span>
+  </section>
 
   <div class="container-fluid">
     <!-- Timeblocks go here -->
@@ -34,7 +37,7 @@
         <p class="hour">9AM</p>
       </div>
       <div class="col-8">
-        <textarea class="" name="event" id="event9" cols="30" rows="2">Event</textarea>
+        <textarea class="" name="event" id="8" cols="30" rows="2">Event</textarea>
       </div>
       <div class="col-2 saveBtn">
         <i class="material-symbols-outlined">
@@ -49,7 +52,7 @@
           <p class="hour">10AM</p>
         </div>
         <div class="col-8">
-          <textarea class="" name="event" id="event10" cols="30" rows="2">Event</textarea>
+          <textarea class="" name="event" id="9" cols="30" rows="2">Event</textarea>
         </div>
         <div class="col-2 saveBtn">
           <i class="material-symbols-outlined">
@@ -64,7 +67,7 @@
           <p class="hour">11AM</p>
         </div>
         <div class="col-8">
-          <textarea class="" name="event" id="event11" cols="30" rows="2">Event</textarea>
+          <textarea class="" name="event" id="10" cols="30" rows="2">Event</textarea>
         </div>
         <div class="col-2 saveBtn">
           <i class="material-symbols-outlined">
@@ -79,7 +82,7 @@
           <p class="hour">12PM</p>
         </div>
         <div class="col-8">
-          <textarea class="" name="event" id="event12" cols="30" rows="2">Event</textarea>
+          <textarea class="" name="event" id="11" cols="30" rows="2">Event</textarea>
         </div>
         <div class="col-2 saveBtn">
           <i class="material-symbols-outlined">
@@ -168,7 +171,9 @@
 
   <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+
   <!-- replacement of moment.js -->
+  
   <script src="https://unpkg.com/dayjs@1.8.21/dayjs.min.js"></script>
   <script src="./script.js"></script>
 </body>
