add function to check time of day and adjust formatting of time slots accordingly using jquery

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -34,7 +34,7 @@
      <!-- 9 AM -->
     <div class="row no-gutters row-custom">
       <div class="col-2">
-        <p class="hour">9AM</p>
+        <p class="hour" data-time="9">9AM</p>
       </div>
       <div class="col-8">
         <textarea class="" name="event" id="8" cols="30" rows="2">Event</textarea>
@@ -49,7 +49,7 @@
       <!-- 10 AM -->
       <div class="row no-gutters row-custom">
         <div class="col-2">
-          <p class="hour">10AM</p>
+          <p class="hour" data-time="10">10AM</p>
         </div>
         <div class="col-8">
           <textarea class="" name="event" id="9" cols="30" rows="2">Event</textarea>
@@ -64,7 +64,7 @@
        <!-- 11 AM -->
        <div class="row no-gutters row-custom">
         <div class="col-2">
-          <p class="hour">11AM</p>
+          <p class="hour" data-time="11">11AM</p>
         </div>
         <div class="col-8">
           <textarea class="" name="event" id="10" cols="30" rows="2">Event</textarea>
@@ -79,7 +79,7 @@
        <!-- 12 PM -->
        <div class="row no-gutters row-custom">
         <div class="col-2">
-          <p class="hour">12PM</p>
+          <p class="hour" data-time="12">12PM</p>
         </div>
         <div class="col-8">
           <textarea class="" name="event" id="11" cols="30" rows="2">Event</textarea>
@@ -94,7 +94,7 @@
        <!-- 1 PM -->
        <div class="row no-gutters row-custom">
         <div class="col-2">
-          <p class="hour">1PM</p>
+          <p class="hour" data-time="13">1PM</p>
         </div>
         <div class="col-8">
           <textarea class="" name="event" id="event1" cols="30" rows="2">Event</textarea>
@@ -109,7 +109,7 @@
        <!-- 2 PM -->
        <div class="row no-gutters row-custom">
         <div class="col-2">
-          <p class="hour">2PM</p>
+          <p class="hour" data-time="14">2PM</p>
         </div>
         <div class="col-8">
           <textarea class="" name="event" id="event2" cols="30" rows="2">Event</textarea>
@@ -124,7 +124,7 @@
        <!-- 3 PM -->
        <div class="row no-gutters row-custom">
         <div class="col-2">
-          <p class="hour">3PM</p>
+          <p class="hour" data-time="15">3PM</p>
         </div>
         <div class="col-8">
           <textarea class="" name="event" id="event3" cols="30" rows="2">Event</textarea>
@@ -139,7 +139,7 @@
        <!-- 4 PM -->
        <div class="row no-gutters row-custom">
         <div class="col-2">
-          <p class="hour">4PM</p>
+          <p class="hour" data-time="16">4PM</p>
         </div>
         <div class="col-8">
           <textarea class="" name="event" id="event4" cols="30" rows="2">Event</textarea>
@@ -154,7 +154,7 @@
       <!-- 5 PM -->
       <div class="row no-gutters row-custom">
         <div class="col-2">
-          <p class="hour">5PM</p>
+          <p class="hour"  data-time="17">5PM</p>
         </div>
         <div class="col-8">
           <textarea class="" name="event" id="event5" cols="30" rows="2">Event</textarea>
