--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <link rel="stylesheet"
     href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="./Assets/style.css" />
   <title>Work Day Scheduler</title>
 </head>
 
@@ -175,7 +175,7 @@
   <!-- replacement of moment.js -->
   
   <script src="https://unpkg.com/dayjs@1.8.21/dayjs.min.js"></script>
-  <script src="./script.js"></script>
+  <script src="./Develop/script.js"></script>
 </body>
 
 </html>
