--- a/index.html
+++ b/index.html
@@ -5,13 +5,17 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <!-- bootstrap link -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
-    integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet" />
-  <!-- added for an icon -->
+  <!-- awseome fonts link - not used -->
+  <!-- <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+    integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" /> -->
+  <!-- google fonts link - not used -->
+  <!-- <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet" /> -->
+  <!-- link for save icon -->
   <link rel="stylesheet"
     href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+  <!-- link for check icon -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
   <link rel="stylesheet" href="./Assets/style.css" />
   <title>Work Day Scheduler</title>
@@ -24,6 +28,7 @@
     <!-- weekday, month day -->
     <p id="currentDay" class="lead time-block"></p>
   </header>
+  <!-- message posted when event is saved -->
   <section class="saveMessage">Appointment added to&nbsp;
     <span class="red">localStorage</span>
     <span class="material-symbols-outlined">check</span>
@@ -37,7 +42,7 @@
         <p class="hour" data-time="9">9AM</p>
       </div>
       <div class="col-8">
-        <textarea class="" name="event" id="8" cols="30" rows="2">Event</textarea>
+        <textarea class="" name="event" id="event1" cols="30" rows="2">Event</textarea>
       </div>
       <div class="col-2 saveBtn">
         <i class="material-symbols-outlined">
@@ -52,7 +57,7 @@
           <p class="hour" data-time="10">10AM</p>
         </div>
         <div class="col-8">
-          <textarea class="" name="event" id="9" cols="30" rows="2">Event</textarea>
+          <textarea class="" name="event" id="event2" cols="30" rows="2">Event</textarea>
         </div>
         <div class="col-2 saveBtn">
           <i class="material-symbols-outlined">
@@ -67,7 +72,7 @@
           <p class="hour" data-time="11">11AM</p>
         </div>
         <div class="col-8">
-          <textarea class="" name="event" id="10" cols="30" rows="2">Event</textarea>
+          <textarea class="" name="event" id="event3" cols="30" rows="2">Event</textarea>
         </div>
         <div class="col-2 saveBtn">
           <i class="material-symbols-outlined">
@@ -82,7 +87,7 @@
           <p class="hour" data-time="12">12PM</p>
         </div>
         <div class="col-8">
-          <textarea class="" name="event" id="11" cols="30" rows="2">Event</textarea>
+          <textarea class="" name="event" id="event4" cols="30" rows="2">Event</textarea>
         </div>
         <div class="col-2 saveBtn">
           <i class="material-symbols-outlined">
@@ -97,7 +102,7 @@
           <p class="hour" data-time="13">1PM</p>
         </div>
         <div class="col-8">
-          <textarea class="" name="event" id="event1" cols="30" rows="2">Event</textarea>
+          <textarea class="" name="event" id="event5" cols="30" rows="2">Event</textarea>
         </div>
         <div class="col-2 saveBtn">
           <i class="material-symbols-outlined">
@@ -112,7 +117,7 @@
           <p class="hour" data-time="14">2PM</p>
         </div>
         <div class="col-8">
-          <textarea class="" name="event" id="event2" cols="30" rows="2">Event</textarea>
+          <textarea class="" name="event" id="event6" cols="30" rows="2">Event</textarea>
         </div>
         <div class="col-2 saveBtn">
           <i class="material-symbols-outlined">
@@ -127,7 +132,7 @@
           <p class="hour" data-time="15">3PM</p>
         </div>
         <div class="col-8">
-          <textarea class="" name="event" id="event3" cols="30" rows="2">Event</textarea>
+          <textarea class="" name="event" id="event7" cols="30" rows="2">Event</textarea>
         </div>
         <div class="col-2 saveBtn">
           <i class="material-symbols-outlined">
@@ -142,7 +147,7 @@
           <p class="hour" data-time="16">4PM</p>
         </div>
         <div class="col-8">
-          <textarea class="" name="event" id="event4" cols="30" rows="2">Event</textarea>
+          <textarea class="" name="event" id="event8" cols="30" rows="2">Event</textarea>
         </div>
         <div class="col-2 saveBtn">
           <i class="material-symbols-outlined">
@@ -157,7 +162,7 @@
           <p class="hour"  data-time="17">5PM</p>
         </div>
         <div class="col-8">
-          <textarea class="" name="event" id="event5" cols="30" rows="2">Event</textarea>
+          <textarea class="" name="event" id="event9" cols="30" rows="2">Event</textarea>
         </div>
         <div class="col-2 saveBtn">
           <i class="material-symbols-outlined">
@@ -168,12 +173,10 @@
     
     </div>
   
-
+  <!-- link for jQuery -->
   <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
-
-  <!-- replacement of moment.js -->
-  
+  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script> -->
+  <!-- replacement for moment.js -->
   <script src="https://unpkg.com/dayjs@1.8.21/dayjs.min.js"></script>
   <script src="./Develop/script.js"></script>
 </body>
